# QuickFix

FixClient/: CMakeLists.txt  fix_initiator.cfg  initiator_application.cpp  initiator_application.h  main.cpp
FixServer/: CMakeLists.txt  acceptor_application.cpp  acceptor_application.h  fix_acceptor.cfg  main.cpp
